WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275763
Fail subframe loads instead of showing Safe Browsing warning page
https://bugs.webkit.org/show_bug.cgi?id=275763
Summary
Fail subframe loads instead of showing Safe Browsing warning page
Matthew Finkel
Reported
2024-06-21 17:00:34 PDT
Fail subframe loads instead of showing Safe Browsing warning page
Attachments
Add attachment
proposed patch, testcase, etc.
Matthew Finkel
Comment 1
2024-06-21 17:00:49 PDT
<
rdar://problem/125737529
>
Matthew Finkel
Comment 2
2024-06-21 17:04:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30071
EWS
Comment 3
2024-07-12 15:10:59 PDT
Committed
280923@main
(0c10d17a101b): <
https://commits.webkit.org/280923@main
> Reviewed commits have been landed. Closing PR #30071 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug