Fail subframe loads instead of showing Safe Browsing warning page https://bugs.webkit.org/show_bug.cgi?id=275763 rdar://125737529

Reviewed by NOBODY (OOPS!).

Instead of showing the safe browsing warning page in an iframe, this change now
fails the load instead. This provides a better user experience and avoids
confusion.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::continueDecidePolicyForNavigationAction):